Switch to Service Status Dashboard

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <header>
             <div class="header-content">
                 <i class="fa-solid fa-chart-pie logo-icon"></i>
-                <h1>Z.ai Dashboard</h1>
+                <h1>Z.ai Status Dashboard</h1>
             </div>
-            <div class="status-pill">
-                <i class="fa-solid fa-rotate" id="spinner-icon"></i>
-                <span id="last-updated">Updating...</span>
+            <div class="header-right">
+                <span id="last-updated" class="last-updated"><i class="fa-solid fa-circle-notch fa-spin"></i>
+                    Loading...</span>
             </div>
             <button id="refresh-btn" class="refresh-btn">
                 <i class="fa-solid fa-sync"></i> Refresh Data
